DB operations examined

--- a/JokesApp/Views/Home/Index.cshtml
+++ b/JokesApp/Views/Home/Index.cshtml
@@ -6,12 +6,12 @@
     <p>Here is the jokes app, welcome search any joke.</p>
 </div>
 
-<div style="position: absolute; top: 100px; right: 10px; width: 200px;">
+<div style="position: absolute; top: 100px; right: 10px; width: 250px;">
     <div class="card" style="background-color: #007bff; color: white; padding: 10px;">
-        <h2 class="card-text">Mevcut Hava Durumu:</h2>
+        <h5 class="card-text">Mevcut Hava Durumu:</h5>
         <p class="card-text">@ViewBag.weatherModel.cityName</p>
         <p class="card-text">@ViewBag.weatherModel.country</p>
-        <p class="card-text">@ViewBag.weatherModel.tempValue</p>
+        <p class="card-text">@ViewBag.weatherModel.tempValue 'C</p>
     </div>
 </div>
 
