--- a/JokesApp/Views/Shared/_Layout.cshtml
+++ b/JokesApp/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Jokes" asp-action="ShowSearchForm">Search</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="BlogPosts" asp-action="Index">Blog</a>
+                        </li>
 
                     </ul>
                     <partial name="_LoginPartial" />
@@ -46,7 +49,7 @@
 
     <footer class="border-top footer text-muted">
         <div class="container">
-            &copy; 2024 - JokesApp - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            2024 - JokesApp by <a href="https://github.com/hikyylz">Bu kişisel github hesabım.</a>
         </div>
     </footer>
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
