--- a/JokesApp/Views/Home/Index.cshtml
+++ b/JokesApp/Views/Home/Index.cshtml
@@ -1,17 +1,36 @@
-﻿@{
+﻿
+@{
     ViewData["Title"] = "Home Page";
 }
+
+
+<head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+</head>
+
 <div class="text-center">
     <h1 class="display-4">Welcome Jokes App</h1>
     <p>Here is the jokes app, welcome search any joke.</p>
 </div>
 
-<div style="position: absolute; top: 100px; right: 10px; width: 250px;">
-    <div class="card" style="background-color: #007bff; color: white; padding: 10px;">
-        <h5 class="card-text">Mevcut Hava Durumu:</h5>
-        <p class="card-text">@ViewBag.weatherModel.cityName</p>
-        <p class="card-text">@ViewBag.weatherModel.country</p>
-        <p class="card-text">@ViewBag.weatherModel.tempValue 'C</p>
+
+
+
+<div class="container mt-5">
+    <div class="column" style="position: absolute; top: 100px; right: 10px; width: 250px;">
+        @foreach (var item in ViewBag.modelsList)
+        {
+            <div class="card" style="background-color: #007bff; color: white; padding: 10px;">
+                <h5 class="card-text">Mevcut Hava Durumu:</h5>
+                <p class="card-text">@item.cityName</p>
+                <p class="card-text">@item.country</p>
+                <p class="card-text">@item.tempValue 'C</p>
+            </div>
+        }
     </div>
 </div>
+
+
+
+
 
