--- a/JokesApp/Views/BlogPosts/Index.cshtml
+++ b/JokesApp/Views/BlogPosts/Index.cshtml
@@ -5,15 +5,17 @@
 }
 
 
-
 <head>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 
 <h4>BlogPosts</h4>
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<div>
+    <p>
+        <a asp-action="Create">Create New</a>
+    </p>
+</div>
+
 <hr />
 
 <div class="container mt-5">
@@ -26,7 +28,7 @@
                     <div class="card-body">
                         <h5 class="card-title">@item.BlogTitle</h5>
                         <p class="card-text">@item.BlogDescription</p>
-                        <a href="#" class="btn btn-primary">Daha fazla</a>
+                        <a asp-action="Details" asp-route-id="@item.BlogId">Daha fazla</a>
                     </div>
                 </div>
             </div>
