--- a/JokesApp/Views/Shared/_Layout.cshtml
+++ b/JokesApp/Views/Shared/_Layout.cshtml
@@ -47,11 +47,12 @@
         </main>
     </div>
 
-    <footer class="border-top footer text-muted">
+    <footer class="border-top footer text-muted" style="background-color: white;">
         <div class="container">
             2024 - JokesApp by <a href="https://github.com/hikyylz">Bu kişisel github hesabım.</a>
         </div>
     </footer>
+
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
