--- a/JokesApp/Views/BlogPosts/Index.cshtml
+++ b/JokesApp/Views/BlogPosts/Index.cshtml
@@ -16,6 +16,14 @@
     </p>
 </div>
 
+<div>
+    <p>
+        <a asp-action="AskAI">Ask AI To write a blog</a>
+    </p>
+</div>
+
+
+
 <hr />
 
 <div class="container mt-5">
